content/_sass/_custom.scss
/*
 * Copyright 2025 Ian Lewis
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

blockquote {
  background: #f4f4f4;
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C" "\201D" "\2018" "\2019";
}

.dark blockquote {
  background: #00080a;
}

// Word wrap Japanese text using contextual analysis.
// See https://developers-jp.googleblog.com/2023/09/budoux-adobe.html
ul.posts li {
  word-break: auto-phrase;
}

// Word wrap Japanese text using contextual analysis.
// See https://developers-jp.googleblog.com/2023/09/budoux-adobe.html
.post-container {
  word-break: auto-phrase;
}

// Pagination styling
ul.pager {
  text-align: center;

  li {
    list-style: none;
    display: inline-block;
    padding: 1em;
  }
}

// 404 page styling
.not-found {
  margin: 10px auto;
  max-width: 600px;
  text-align: center;

  h1 {
    margin: 30px 0;
    font-size: 4em;
    line-height: 1;
    letter-spacing: -1px;
  }
}

// Translation links styling
.translation-links {
  font-family: "Montserrat", "Noto Sans JP", sans-serif;
  font-weight: 800;

  margin-left: 10px;
  color: #555;
  white-space: nowrap;

  .current-locale {
    font-weight: 800;
  }

  a {
    color: #555;
    text-decoration: none;

    &:hover {
      color: #0a59b0;
    }
  }
}

